Initial commit start afresh

--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Victor Shaviya">
+    <link rel="shortcut icon" type="image/png" href="./images/ignitiondesigns.png">
+    <link href="./css/all.min.css" rel="stylesheet">
+    <!-- start of my custom css rules  -->
+    <link rel="stylesheet" href="./css/styles.css" type="text/css">
+    <!-- end of my custom css rules  -->
+    <title>Akan Name Generator</title>
+  </head>
+  <body>
+    <!--    start of header section   -->
+    <header>
+
+    </header>
+    <!--    end of header section   -->
+  </body>
 </html>
