link bootstrap and my custom js as well partition the page into sections

--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Victor Shaviya">
     <link rel="shortcut icon" type="image/png" href="./images/ignitiondesigns.png">
+    <!-- font awesome link  -->
     <link href="./css/all.min.css" rel="stylesheet">
+    <!-- start of bootstrap css rules  -->
+    <link href="./css/bootstrap.css" rel ="stylesheet" type="text/css">
+    <!-- end of bootstrap css rules  -->
     <!-- start of my custom css rules  -->
-    <link rel="stylesheet" href="./css/styles.css" type="text/css">
+    <link rel="stylesheet" href="./css/styles.css" type="text/css">    
     <!-- end of my custom css rules  -->
     <title>Akan Name Generator</title>
   </head>
@@ -18,5 +22,21 @@
 
     </header>
     <!--    end of header section   -->
+    <!--    start of main section   -->
+    <section>
+
+    </section>
+    <!--    end of main section   -->
+    <!--    start of footer section   -->
+    <footer>
+
+    </footer>
+    <!--    end of footer section   -->
+    <!--    start of bootstrap scripts   -->
+    <SCRIPT SRC="./js/bootstrap.js"></SCRIPT>
+    <!--    end of bootstrap scripts   -->
+    <!--    start of custom scripts   -->
+    <SCRIPT SRC="./js/functions.js"></SCRIPT>
+    <!--    end of custom scripts   -->
   </body>
 </html>
