Add header and the footer and make them responsive

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Victor Shaviya">
     <link rel="shortcut icon" type="image/png" href="./images/ignitiondesigns.png">
     <!-- font awesome link  -->
-    <link href="./css/all.min.css" rel="stylesheet">
+    <link href="./css/all.css" rel="stylesheet">
     <!-- start of bootstrap css rules  -->
     <link href="./css/bootstrap.css" rel ="stylesheet" type="text/css">
     <!-- end of bootstrap css rules  -->
@@ -19,17 +19,45 @@
   <body>
     <!--    start of header section   -->
     <header>
-
+      <nav class="navbar navbar-light bg-light">
+        <div class="container-fluid">
+          <a href="#" class="navbar-brand">
+            <img src="./images/IgnitionDesignsTM.png" alt="">
+          </a>
+          <form class="d-flex">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
+        </div>
+      </nav>
     </header>
     <!--    end of header section   -->
     <!--    start of main section   -->
     <section>
-
+            
     </section>
     <!--    end of main section   -->
     <!--    start of footer section   -->
     <footer>
-
+      <div class="container-fluid">
+        <div class="row">
+          <h1>
+            Contact
+          </h1>
+        </div>
+        <div class="row">
+          <ul class="social">
+            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+            <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+            <li><a href="https://www.instagram.com/ignition_reads/"><i class="fab fa-instagram"></i></a></li>
+            <li><a href="https://github.com/ShaviyaVictor"><i class="fab fa-github"></i></a></li>
+          </ul><hr>
+        </div>
+        <div class="row">
+          <span class="copyright"><i class="far fa-copyright"></i> 2021 IgnitionDesigns   | Nairobi, Kenya | Terms of Service | Privacy Policy</span>
+        </div>
+      </div>
     </footer>
     <!--    end of footer section   -->
     <!--    start of bootstrap scripts   -->
