Add introductory section of the page

--- a/index.html
+++ b/index.html
@@ -33,10 +33,26 @@
     </header>
     <!--    end of header section   -->
     <!--    start of main section   -->
-    <section>
-            
+    <section class="introduction">
+       <div class="container">
+         <div class="row">
+           <h1 class="top">
+             Akan Name Generator
+           </h1>
+           <p class="intro">
+             Don't just know the your date of birth. Get to know the day of the week in which you were born.<br>
+             What if you were born Ghanaian? Your first name would reflect the day of the week in which you were born.<br>
+             Get to know that too <i class="far fa-smile"></i>.
+           </p>
+         </div>
+       </div>     
     </section>
     <!--    end of main section   -->
+    <!--    start of aside section   -->
+    <aside>
+
+    </aside>
+    <!--    end of aside section   -->
     <!--    start of footer section   -->
     <footer>
       <div class="container-fluid">
