--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
       <nav class="navbar navbar-light bg-light">
         <div class="container-fluid">
           <a href="#" class="navbar-brand">
-            <img src="./images/IgnitionDesignsTM.png" alt="">
+            <img src="./images/IgnitionDesignsTM.png" alt="IgnitionDesigns" title="ignitiondesignsTM">
           </a>
           <form class="d-flex">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
+            <button class="btn btn-outline-success" type="submit" title="search" >Search</button>
           </form>
         </div>
       </nav>
@@ -34,7 +34,7 @@
     <!--    end of header section   -->
     <!--    start of main section   -->
     <section class="introduction">
-       <div class="container">
+       <div class="container first">
          <div class="row">
            <h1 class="top">
              Akan Name Generator
@@ -45,7 +45,40 @@
              Get to know that too <i class="far fa-smile"></i>.
            </p>
          </div>
-       </div>     
+       </div>    
+    </section>
+    <section class="content">
+      <div class="container second">
+        <div class="row main">
+          <div class="col-7 left">
+            <div class="row main.one">
+              <div class="mb-3 col-7">
+                <label for="exampleFormControlInput1" class="form-label">Date of Birth:</label>
+                <input type="date" class="form-control" id="exampleFormControlInput1" name="dateOfBirth" value="1995-08-20">
+              </div>
+            </div>
+            <div class="row main.two">
+              <div class="col-7">
+                <label for="exampleDataList" class="form-label">Which Gender?</label>
+                <input class="form-control" list="datalistOptions" id="exampleDataList" placeholder="Type to search...">
+                <datalist id="datalistOptions">
+                  <option value="San Francisco">
+                  <option value="New York">
+                  <option value="Seattle">
+                  <option value="Los Angeles">
+                  <option value="Chicago">
+                </datalist>
+              </div>
+              <div class="col-5">
+                
+              </div>             
+            </div>
+          </div>
+          <div class="col-5 right">
+
+          </div>
+        </div>
+      </div>
     </section>
     <!--    end of main section   -->
     <!--    start of aside section   -->
@@ -63,11 +96,11 @@
         </div>
         <div class="row">
           <ul class="social">
-            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-            <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-            <li><a href="https://www.instagram.com/ignition_reads/"><i class="fab fa-instagram"></i></a></li>
-            <li><a href="https://github.com/ShaviyaVictor"><i class="fab fa-github"></i></a></li>
+            <li><a href="#" title="facebook"><i class="fab fa-facebook-f"></i></a></li>
+            <li><a href="#" title="twitter"><i class="fab fa-twitter"></i></a></li>
+            <li><a href="#" title="linkedin"><i class="fab fa-linkedin-in"></i></a></li>
+            <li><a href="https://www.instagram.com/ignition_reads/" title="instagram"><i class="fab fa-instagram"></i></a></li>
+            <li><a href="https://github.com/ShaviyaVictor" title="github"><i class="fab fa-github"></i></a></li>
           </ul><hr>
         </div>
         <div class="row">
