Add the form submit button

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="container second">
         <div class="row main">
           <div class="col-7 left">
-            <div class="row main.one">
+            <div class="row main.one justify-content-center">
               <div class="mb-3 col-7">
                 <label for="exampleFormControlInput1" class="form-label">Date of Birth:</label>
                 <input type="date" class="form-control" id="exampleFormControlInput1" name="dateOfBirth" value="yyyy-mm-dd" max="2021-11-13" required>
@@ -67,7 +67,7 @@
                 </datalist>
               </div>
               <div class="col-5">
-                
+                <button type="button" class="btn btn-outline-success">Submit</button>
               </div>             
             </div>
           </div>
