Add margin bottom for the accordion-body

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       </div>
     </section>
     <!--    end of main section   -->
-    <!--    start of aside section   -->
+    <!--    start of conclusion section   -->
     <section class="conclusion">
       <div class="container">
         <div class="row">
