--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
                 </datalist>
               </div>
               <div class="col-5">
-                <button type="button" class="btn btn-outline-success">Submit</button>
+                <button onclick='akanNameGenerate(event)' type="button" class="btn btn-outline-success">Submit</button>
               </div>             
             </div>
           </div>
-          <div class="col-11 col-md-4 col-lg-3 col-xl-3 col-xxl-5 right"></div>
+          <div class="col-11 col-md-4 col-lg-3 col-xl-3 col-xxl-5 right" id="output"></div>
         </div>
       </div>
     </section>
