Add to the README the project name, description and the author

--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
           <div class="col-11 col-md-6 col-lg-7 col-xl-6 col-xxl-5 left">
             <div class="row main.one justify-content-center">
               <div class="mb-3 col-7">
-                <label for="exampleFormControlInput1" class="form-label date">Date of Birth:</label>
-                <input type="date" class="form-control" id="exampleFormControlInput1" name="dateOfBirth" value="yyyy-mm-dd" max="2021-11-13" required>
+                <label for="date" class="form-label date">Date of Birth:</label>
+                <input type="date" class="form-control" id="date" name="dateOfBirth" value="yyyy-mm-dd" max="2021-11-13" required>
               </div>
             </div>
             <div class="row">
               <div class="col-7">
-                <label for="exampleDataList" class="form-label gender">Which Gender?</label>
-                <input class="form-control gender" list="datalistOptions" id="exampleDataList" placeholder="Either...">
+                <label for="gender" class="form-label gender">Which Gender?</label>
+                <input class="form-control gender" list="datalistOptions" id="gender" placeholder="Either...">
                 <datalist id="datalistOptions">
                   <option value="Masculine">
                   <option value="Feminine">
